name:                boolean-normal-forms
version:             0.0.0.1
synopsis:            Boolean normal form: NNF, DNF & CNF
description:         The provided types that might be useful in symbolic manipulation of propositional logic expressions.
homepage:            https://github.com/phadej/boolean-normal-forms
license:             MIT
license-file:        LICENSE
author:              Oleg Grenrus
maintainer:          Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:           © Oleg Grenrus 2014
category:            Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
extra-doc-files:      doc-formulae/*.svg

library
  exposed-modules:
    Algebra.Boolean.NormalForms,
    Algebra.Boolean,
    Algebra.Heyting,
    Algebra.Negable,
    Algebra.Lattice.Extras,
    Data.SetLike,
    Data.Conjunction,
    Data.Disjunction,
    Data.Algebra.Boolean.NormalForm,
    Data.Algebra.Boolean.FreeBoolean,
    Data.Algebra.Boolean.NNF,
    Data.Algebra.Boolean.DNF,
    Data.Algebra.Boolean.CNF,
    Data.Algebra.Boolean.Negable,
    Data.Algebra.Boolean.CoBoolean,
    Data.Algebra.Boolean.NNF.Set,
    Data.Algebra.Boolean.NNF.Tree,
    Data.Algebra.Boolean.DNF.List,
    Data.Algebra.Boolean.DNF.Set,
    Data.Algebra.Boolean.CNF.List,
    Data.Algebra.Boolean.CNF.Set
  other-extensions:
    DeriveFunctor,
    DeriveDataTypeable,
    ConstraintKinds,
    TypeFamilies,
    ScopedTypeVariables
  build-depends:
    base >=4.6 && <4.10,
    containers >=0.5 && <0.6,
    lattices >=1.2 && <1.3,
    semigroups >=0.16.0.1 && <0.17,
    deepseq >=1.3 && <1.5,
    QuickCheck >=2.7 && <=2.8,
    cond >=0.4.1 && <0.5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -O2
                       -fwarn-tabs
                       -fspec-constr-count=6
                       -fmax-simplifier-iterations=10
                       -fdicts-cheap

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:
    BooleanLaws,
    CNFList,
    CNFSet,
    DNFList,
    DNFSet,
    FreeBoolean,
    FreeBooleanTests,
    NegableLaws,
    NegableLawsNew,
    NNFSet,
    NNFTree,
    SimplifyLaws
  ghc-options:
    -Wall
    -O2
    -fno-warn-orphans
  build-depends:
    base >=4.6 && <4.10,
    containers >= 0.5 && <0.6,
    cond >=0.4.1 && <0.5,
    tasty >=0.8,
    tasty-quickcheck >=0.8.0.2,
    QuickCheck >=2.7 && <=2.8,
    boolean-normal-forms
